objects/ASI_CRM_Trade_A_P_Plan_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Balance_Quantity__c</fullName>
        <formula>ASI_CRM_Quantity__c - ASI_CRM_Committed_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Quantity__c</fullName>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Scheme__c</fullName>
        <label>Promotion Scheme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <formula>ASI_CRM_Unit_Price__c * ASI_CRM_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Trade_A_P_Plan__c</fullName>
        <label>Trade A&amp;P Plan</label>
        <referenceTo>ASI_CRM_Trade_A_P_Plan__c</referenceTo>
        <relationshipLabel>Trade A&amp;P Plan Items</relationshipLabel>
        <relationshipName>Trade_A_P_Plan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Trade A&amp;P Plan Item</label>
    <nameField>
        <displayFormat>PPI-{000000}</displayFormat>
        <label>Trade A&amp;P Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade A&amp;P Plan Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Plan_Item</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Plan Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Plan_Item_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Plan Item Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_VN_Quantity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Quantity__c</errorDisplayField>
        <errorMessage>The Quantity cannot be 0 or negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_UnitPrice_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_Unit_Price__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Unit_Price__c</errorDisplayField>
        <errorMessage>The Unit Price cannot be 0 or negative number</errorMessage>
    </validationRules>
</CustomObject>